prev week gap fix

--- a/src/style.css
+++ b/src/style.css
@@ -109,7 +109,7 @@ body {
 
 .week div {
   display: flex;
-  gap: 1em;
+  gap: 0.5em;
   justify-content: end;
 }
 
